Name:           hstyle
Version:        0.2.0.3
Synopsis:       Checks Haskell source code for style compliance.
Description:    Originally intended to automate style checking for the Snap
                project.  But the project should be general enough to work
                with other style guides.
License:        BSD3
License-file:   LICENSE
Author:         Doug Beardsley <mightybyte@mightybyte.net>
                Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:     Doug Beardsley <mightybyte@mightybyte.net>
                Jasper Van der Jeugt <m@jaspervdj.be>
Build-type:     Simple
Cabal-version:  >= 1.6
Category:       Development

Extra-source-files:
  README.markdown

Executable hstyle
  Ghc-options:    -Wall
  Hs-source-dirs: src
  Main-is:        Main.hs

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall

  Exposed-modules:
    HStyle.Alignment
    HStyle.Block
    HStyle.Checker
    HStyle.Fixer
    HStyle.Main
    HStyle.Parse
    HStyle.Rule
    HStyle.Rules.AppSpacing
    HStyle.Rules.CaseAlignment
    HStyle.Rules.DataAlignment
    HStyle.Rules.LineLength
    HStyle.Rules.PatMatchAlignment
    HStyle.Rules.Tabs
    HStyle.Rules.TrailingWhiteSpace
    HStyle.Rules.TypeSigAlignment
    HStyle.Selector

  Build-depends:
    base             >= 4    && < 5,
    cmdargs          >= 0.8  && < 0.9,
    containers       >= 0.3  && < 0.5,
    directory        >= 1.0  && < 1.2,
    filepath         >= 1.0  && < 1.3,
    haskell-src-exts >= 1.11 && < 1.12,
    mtl              >= 2.0  && < 2.1,
    syb              >= 0.3  && < 0.4,
    text             >= 0.11 && < 0.12,
    vector           >= 0.7  && < 0.8

Source-repository head
  type:     git
  location: http://github.com/mightybyte/hstyle
